# projeto_pos_ufg

./: .env.example  .gitignore  Descritivo Completo.md  Documentação.md  Makefile  Projetos Sugeridos.md  README.md  Roteiro Técnico.md  pyproject.toml  requirements.txt
.agents/skills/design-system/: SKILL.md
app/: main.py
app/database/: db.py
app/models/: task_model.py
app/routes/: task_routes.py
app/schemas/: task_schema.py
app/services/: priority_advisor.py  task_service.py
app/tests/: conftest.py  test_tasks.py
app/tests/results/: environment.txt  test_report.txt
app/tests/unit/: test_priority_advisor.py  test_task_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  weg-ui-mock.tsx
scratch/: test_db.py
scripts/: install.ps1  run.ps1  setup_env.ps1  test.ps1
